--- a/backend/frontend/static/templates/home.html
+++ b/backend/frontend/static/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -12,14 +13,14 @@
 	<meta name="author" content="TemplatesJungle">
 	<meta name="keywords" content="Portfolio, Bootstrap5, HTML/CSS, Website Template">
 	<meta name="description" content="Aurora is a Portfolio Bootstrap5 HTML/CSS Website Template">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 
-	<link rel="stylesheet" type="text/css" href="assets/icomoon/icomoon.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/vendor/chocolat/css/chocolat.css">
-	<link rel="stylesheet" type="text/css" href="css/vendor.css">
+	<link rel="stylesheet" href="{% static 'assets/icomoon/icomoon.css' %}">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="{% static 'assets/vendor/chocolat/css/chocolat.css' %}">
+	<link rel="stylesheet" href="{% static 'css/vendor.css' %}">
 
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="{% static 'style.css' %}">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -270,15 +271,13 @@
 		</div>
 	</div> -->
 
-	<script src="js/jquery-1.11.0.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-		crossorigin="anonymous"></script>
-	<script src="assets/vendor/chocolat/js/chocolat.js"></script>
-	<script src="js/plugins.js"></script>
-	<script src="js/script.js"></script>
-    <script src="script.js"></script>
-    <script src="script.js" defer></script>
+	<script src="{% static 'js/jquery-1.11.0.min.js' %}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="{% static 'assets/vendor/chocolat/js/chocolat.js' %}"></script>
+	<script src="{% static 'js/plugins.js' %}"></script>
+	<script src="{% static 'js/script.js' %}"></script>
+	<script src="{% static 'js/cv.js' %}"></script>
+	<script src="{% static 'js/single.js' %}"></script>
 
 
 </body>
