--- a/backend/frontend/static/templates/single-portfolio.html
+++ b/backend/frontend/static/templates/single-portfolio.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -9,12 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="assets/icomoon/icomoon.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/icomoon/icomoon.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="assets/vendor/chocolat/css/chocolat.css">
-    <link rel="stylesheet" type="text/css" href="css/vendor.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/vendor/chocolat/css/chocolat.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/vendor.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,11 +31,7 @@
             <span class="loader-inner"></span>
         </span>
     </div>
-    <!-- Header -->
-    <header id="header">
-        <div class="header-wrap" data-aos="fade">
-        </div>
-    </header>
+
     <!-- Banner -->
     <section id="billboard"
         class="jarallax bg-secondary d-flex align-items-center justify-content-center text-center"
@@ -43,11 +40,12 @@
             Single Project
         </h1>
     </section>
+
     <!-- Project Detail -->
     <section id="project-detail" class="padding-large">
         <div class="container-lg">
             <div class="text-end mb-4">
-                <a href="index.html" class="btn btn-outline-secondary btn-lg">
+                <a href="{% url 'home' %}" class="btn btn-outline-secondary btn-lg">
                     ← Back to Home
                 </a>
             </div>
@@ -58,14 +56,16 @@
             <div id="project-images" class="project-images d-flex flex-wrap gap-3"></div>
         </div>
     </section>
+
     <!-- Scripts -->
-    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <script src="assets/vendor/chocolat/js/chocolat.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/script.js"></script>
-    <script src="single-project.js"></script>
+    <script src="{% static 'assets/vendor/chocolat/js/chocolat.js' %}"></script>
+    <script src="{% static 'js/plugins.js' %}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'js/single.js' %}"></script>
+    <script src="{% static 'js/cv.js' %}"></script>
 
     <script>
         $(document).ready(function () {
@@ -75,5 +75,4 @@
         });
     </script>
 </body>
-
 </html>
