--- a/backend/frontend/static/templates/frontend/profiles/list.html
+++ b/backend/frontend/static/templates/frontend/profiles/list.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container mt-4">
     <h2>Profiles</h2>
-    <a href="{% url 'profile_create' %}" class="btn btn-success mb-3">+ Tambah Profile</a>
+   <a href="{% url 'profile_create' %}" class="btn btn-success">+ Tambah Profile</a>
     <table class="table table-bordered">
         <thead>
             <tr>
@@ -12,6 +12,7 @@
                 <th>Email</th>
                 <th>Github</th>
                 <th>Summary</th>
+                <th>Gambar</th>
                 <th>Aksi</th>
             </tr>
         </thead>
@@ -24,6 +25,14 @@
                 <td>{{ p.email }}</td>
                 <td>{{ p.github }}</td>
                 <td>{{ p.summary|truncatewords:10 }}</td>
+                <td>
+                    {% if p.image %}
+                        <img src="{{ p.image.url }}" alt="Profile Image" width="80" class="img-thumbnail">
+                    {% else %}
+                        <span class="text-muted">Tidak ada</span>
+                    {% endif %}
+                </td>
+                
                 <td>
                     <a href="{% url 'profile_edit' p.pk %}" class="btn btn-warning btn-sm">Edit</a>
                     <a href="{% url 'profile_delete' p.pk %}" class="btn btn-danger btn-sm">Hapus</a>
