--- a/backend/frontend/static/templates/frontend/dashboard.html
+++ b/backend/frontend/static/templates/frontend/dashboard.html
@@ -46,6 +46,13 @@
             </a>
 					</li>
 					<li class="sidebar-item">
+					<a class="sidebar-link" href="{% url 'skill_list' %}">
+						<i class="align-middle" data-feather="award"></i> 
+						<span class="align-middle">Skill</span>
+					</a>
+				</li>
+
+					<li class="sidebar-item">
 						<a class="sidebar-link" href="pages-blank.html">
               <i class="align-middle" data-feather="book"></i> <span class="align-middle">Blank</span>
             </a>
