--- a/backend/frontend/static/templates/frontend/dashboard.html
+++ b/backend/frontend/static/templates/frontend/dashboard.html
@@ -51,6 +51,13 @@
 						<span class="align-middle">Skill</span>
 					</a>
 				</li>
+				<li class="sidebar-item">
+					<a class="sidebar-link" href="{% url 'org_list' %}">
+						<i class="align-middle" data-feather="briefcase"></i> 
+						<span class="align-middle">Organisasi</span>
+					</a>
+				</li>
+
 
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="pages-blank.html">
