--- a/backend/frontend/static/templates/frontend/dashboard.html
+++ b/backend/frontend/static/templates/frontend/dashboard.html
@@ -57,6 +57,13 @@
 						<span class="align-middle">Organisasi</span>
 					</a>
 				</li>
+				<li class="sidebar-item">
+					<a class="sidebar-link" href="{% url 'edu_list' %}">
+						<i class="align-middle" data-feather="book"></i> 
+						<span class="align-middle">Education</span>
+					</a>
+				</li>
+
 
 
 					<li class="sidebar-item">
