--- a/backend/frontend/static/templates/frontend/dashboard.html
+++ b/backend/frontend/static/templates/frontend/dashboard.html
@@ -63,6 +63,12 @@
 						<span class="align-middle">Education</span>
 					</a>
 				</li>
+				<li class="sidebar-item">
+					<a class="sidebar-link" href="{% url 'project_list' %}">
+						<i class="align-middle" data-feather="layers"></i> 
+						<span class="align-middle">Project</span>
+					</a>
+				</li>
 
 
 
