--- a/backend/frontend/static/templates/layouts/sidebar.html
+++ b/backend/frontend/static/templates/layouts/sidebar.html
@@ -2,7 +2,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 				<a class="sidebar-brand" href="{% url 'dashboard' %}">
-          <span class="align-middle">AdminKit</span>
+          <span class="align-middle">Dashboard Admin</span>
         </a>
 
 				<ul class="sidebar-nav">
