--- a/backend/frontend/static/templates/frontend/dashboard.html
+++ b/backend/frontend/static/templates/frontend/dashboard.html
@@ -15,7 +15,7 @@
 
 	<link rel="canonical" href="https://demo-basic.adminkit.io/" />
 
-	<title>Dashboard Admin</title>
+	<title>Dashboard </title>
 
 	<link href="{% static 'css/app.css' %}" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
