--- a/backend/frontend/static/templates/layouts/sidebar.html
+++ b/backend/frontend/static/templates/layouts/sidebar.html
@@ -2,7 +2,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 				<a class="sidebar-brand" href="{% url 'dashboard' %}">
-          <span class="align-middle">Dashboard Admin</span>
+          <span class="align-middle">Dashboard </span>
         </a>
 
 				<ul class="sidebar-nav">
@@ -11,11 +11,18 @@
 					</li>
 
 					<li class="sidebar-item active">
-						<a class="sidebar-link" href="{% url 'dashboard' %}">
-              <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
-            </a>
+						{% if request.user.is_staff %}
+							<a class="sidebar-link" href="{% url 'dashboard' %}">
+								<i class="align-middle" data-feather="sliders"></i> 
+								<span class="align-middle">Dashboard</span>
+							</a>
+						{% else %}
+							<a class="sidebar-link" href="{% url 'user_dashboard' %}">
+								<i class="align-middle" data-feather="sliders"></i> 
+								<span class="align-middle">Dashboard</span>
+							</a>
+						{% endif %}
 					</li>
-
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="{% url 'profile-list' %}">
               <i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
@@ -51,3 +58,5 @@
 				
 			</div>
 		</nav>
+
+		
